# OpenOrchestrator

./: .gitignore  .pylintrc  Application.py  Email_Trigger_Popup.py  Logging_tab.py  Orchestrator.py  README.md  Scheduler.drawio  Settings_tab.py  Single_Trigger_Popup.py  Trigger_tab.py  alembic.ini  changelog.md  manual_tests.txt  project.toml  pyproject.toml  requirements.txt  run_orchestrator.bat
.Illustrations/: Architecture.drawio
.github/workflows/: Changelog.yml  Linting.yml  Run-Tests.yml  pylint.yml  python-publish.yml
OpenOrchestrator/: __init__.py  __main__.py
OpenOrchestrator/Common/: crypto_util.py  db_util.py  ui_util.py
OpenOrchestrator/Orchestrator/: Application.py  Constants_tab.py  Crypto_util.py  DB_util.py  Logging_tab.py  Settings_tab.py  Table_util.py  Trigger_tab.py  constants_tab.py  logging_tab.py  settings_tab.py  table_util.py  trigger_tab.py
OpenOrchestrator/Scheduler/: Application.py  Crypto_util.py  DB_util.py  Run_tab.py  Runner.py  Settings_tab.py  application.py  run_tab.py  settings_tab.py
OpenOrchestrator/alembic/: alembic.ini  env.py  script.py.mako
OpenOrchestrator/common/: connection_frame.py  crypto_util.py  datetime_util.py  db_util.py  ui_util.py
OpenOrchestrator/database/: base.py  constants.py  db_util.py  jobs.py  logs.py  queues.py  schedulers.py  triggers.py  truncated_string.py
OpenOrchestrator/orchestrator/: __init__.py  application.py  constants_tab.py  datetime_input.py  datetime_input2.py  logging_tab.py  settings_tab.py  styling_constants.py  table_util.py  test_helper.py  trigger_tab.py
OpenOrchestrator/orchestrator_connection/: connection.py
OpenOrchestrator/robot_connection/: connection.py
OpenOrchestrator/scheduler/: application.py  connection_frame.py  run_tab.py  runner.py  settings_tab.py  util.py
OpenOrchestrator/tests/: db_test_util.py  process_pause_util.py  test_alembic.py  test_db_util.py  test_jobs.py  test_orchestrator_connection.py  test_run_process.py  test_scheduler_runner.py  test_trigger_polling.py  test_trigger_tab.py  ui_util.py
SQL/: Create_Email_Trigger.sql  Create_Scheduled_Trigger.sql  Delete_Trigger.sql  Get_Email_Triggers.sql  Get_Logs.sql  Get_Scheduled_Triggers.sql  Get_Single_Triggers.sql  initialize.sql
alembic/: env.py  script.py.mako
alembic/versions/: rev_1c87ed320c78_added_jobs.py  rev_526b6edac328_add_schedulers_table.py  rev_90d46abd44a3_added_trigger_priority.py  rev_9698388a0709_added_git_branch_to_triggers.py  rev_b67b7649b282_initial.py
src/Orchestrator/: Application.py  Constants_tab.py  Crypto_util.py  DB_util.py  Email_Trigger_Popup.py  Logging_tab.py  Scheduled_Trigger_Popup.py  Settings_tab.py  Single_Trigger_Popup.py  Table_util.py  Trigger_tab.py
src/SQL/: Create_Single_Trigger.sql  Get_Scheduled_Triggers.sql
tests/: db_test_util.py  readme.md  test_db_util.py  test_orchestrator_connection.py
(+62 files in other folders)
