[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenOrchestrator"
version = "1.3.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
description = "A package containing OpenOrchestrator and OpenOrchestrator Scheduler"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "cryptography >= 41.0.3",
    "cronsim >= 2.6",
    "SQLAlchemy >= 2.0.22",
    "pyodbc >= 4.0.39",
    "nicegui == 1.4.12"
]

[project.urls]
"Homepage" = "https://github.com/itk-dev-rpa/OpenOrchestrator"
"Bug Tracker" = "https://github.com/itk-dev-rpa/OpenOrchestrator/issues"

[project.optional-dependencies]
dev = [
  "pylint"
]
