[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["OpenOrchestrator*"]

[project]
name = "OpenOrchestrator"
dynamic = ["version"]
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
description = "A package containing OpenOrchestrator and OpenOrchestrator Scheduler"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "cryptography == 45.0.*",
    "cronsim == 2.6",
    "SQLAlchemy == 2.0.*",
    "pyodbc == 5.2.*",
    "nicegui == 2.22.*"
]

[project.urls]
"Homepage" = "https://github.com/itk-dev-rpa/OpenOrchestrator"
"Bug Tracker" = "https://github.com/itk-dev-rpa/OpenOrchestrator/issues"

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8",
  "selenium"
]

alembic = [
  "alembic == 1.16.*"
]
